Fixup broken CSS var references in zone mappers, add intro help text

--- a/desktop/cmp/zoneGrid/impl/ZoneMapper.scss
+++ b/desktop/cmp/zoneGrid/impl/ZoneMapper.scss
@@ -5,6 +5,7 @@
   &__zone-picker {
     padding: var(--xh-pad-px);
     background: var(--xh-bg-alt);
+    border-top: var(--xh-border-solid);
     border-bottom: var(--xh-border-solid);
 
     &__zone-cell {
@@ -29,27 +30,31 @@
       }
 
       &.tl {
-        font-size: var(--xh-grid-zonegrid-top-font-size-px);
+        font-size: var(--xh-zone-grid-top-font-size-px);
+        color: var(--xh-zone-grid-top-text-color);
         border-radius: var(--xh-border-radius-px) 0 0 0;
       }
 
       &.tr {
         justify-content: flex-end;
         margin: 0 0 0 -1px;
-        font-size: var(--xh-grid-zonegrid-top-font-size-px);
+        font-size: var(--xh-zone-grid-top-font-size-px);
+        color: var(--xh-zone-grid-top-text-color);
         border-radius: 0 var(--xh-border-radius-px) 0 0;
       }
 
       &.bl {
         margin: -1px 0 0 0;
-        font-size: var(--xh-grid-zonegrid-bottom-font-size-px);
+        font-size: var(--xh-zone-grid-bottom-font-size-px);
+        color: var(--xh-zone-grid-bottom-text-color);
         border-radius: 0 0 0 var(--xh-border-radius-px);
       }
 
       &.br {
         justify-content: flex-end;
         margin: -1px 0 0 -1px;
-        font-size: var(--xh-grid-zonegrid-bottom-font-size-px);
+        font-size: var(--xh-zone-grid-bottom-font-size-px);
+        color: var(--xh-zone-grid-bottom-text-color);
         border-radius: 0 0 var(--xh-border-radius-px);
       }
     }
@@ -67,5 +72,10 @@
         margin-right: var(--xh-pad-px);
       }
     }
+  }
+
+  &__intro-text {
+    padding: var(--xh-pad-px);
+    font-size: var(--xh-font-size-small-px);
   }
 }
