--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -496,7 +496,7 @@ body {
   --xh-zone-grid-top-text-color: var(--zone-grid-top-text-color, var(--xh-grid-text-color));
   --xh-zone-grid-top-font-size: var(--zone-grid-top-font-size, 14);
   --xh-zone-grid-top-font-size-px: calc(var(--xh-zone-grid-top-font-size) * 1px);
-  --xh-zone-grid-bottom-text-color: var(--zone-grid-bottom-text-color, var(--xh-text-color-muted));
+  --xh-zone-grid-bottom-text-color: var(--zone-grid-bottom-text-color, var(--xh-grid-text-color));
   --xh-zone-grid-bottom-font-size: var(--zone-grid-bottom-font-size, 11);
   --xh-zone-grid-bottom-font-size-px: calc(var(--xh-zone-grid-bottom-font-size) * 1px);
   --xh-zone-grid-cell-lr-pad-px: var(--zone-grid-cell-pad-px, var(--xh-grid-cell-lr-pad-px));
